refactor. remove delegate to use generic delegate

--- a/PasswordVerifier/PasswordVerifier.csproj
+++ b/PasswordVerifier/PasswordVerifier.csproj
@@ -69,6 +69,12 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Impl\PasswordVerifierException.cs" />
+    <Compile Include="Impl\PasswordVerifierResult.cs" />
+    <Compile Include="Impl\Password.cs" />
+    <Compile Include="Impl\PasswordVerifier.cs" />
+    <Compile Include="Impl\PasswordVerifierRule.cs" />
+    <Compile Include="Impl\PasswordVerifierRuleResult.cs" />
     <Compile Include="PasswordVerifierShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
